tests/samples/compile_errors/statement_placement/type_inside_sub.bas
Attribute VB_Name = "M"
Option Explicit

Sub S()
    Type Point
        x As Long
        y As Long
    End Type
End Sub
